<resources>
    <string name="app_name">AdroScanner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">login</string>
    <string name="signup">Click here to register</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture">Picture</string>
    <string name="register">REGISTER</string>
    <string name="facebook">Facebook</string>
    <string name="show_results">Show Results</string>
    <string name="captured_image">Captured Image</string>
    <string name="job_title">Job Title</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="sign_in">LOGIN</string>
    <string name="google">Google</string>
    <string name="library">Library</string>
</resources>
